--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -8,7 +8,7 @@ on:
         type: string
         default: ghcr.io
       CONTEXT:
-        required: true
+        required: false
         type: string
         default: .
     secrets:
