--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -21,6 +21,7 @@ env:
   GH_REGISTRY_USERNAME: ${{ secrets.GH_REGISTRY_USERNAME }}
   GH_REGISTRY_PASSWORD: ${{ secrets.GH_REGISTRY_PASSWORD }}
   CONTEXT: ${{ inputs.CONTEXT }}
+  IMAGE_TAG: ${{ steps.sha.outputs.sha8 }}
 
 jobs:
   build:
