--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -42,6 +42,9 @@ jobs:
         with:
           context: ${{ env.CONTEXT }}
           push: true
+          build-args: |
+            APP_ENV=prod
+            APP_VERSION=${{ steps.sha.outputs.sha8 }}
           tags: |
             ghcr.io/${{ github.repository }}:${{ steps.sha.outputs.sha8 }}
             ghcr.io/${{ github.repository }}:latest
