Add keel deploy workflow

--- a/.github/workflows/deploy-keel.yaml
+++ b/.github/workflows/deploy-keel.yaml
@@ -28,7 +28,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: deploy
+      - name: deploy-${{ env.APP_ENV }}
         uses: jaapio/keelsh-deploy@master
         with:
           keelBaseUrl: ${{ env.KEEL_WEBHOOK_URL }}
