Add deploy keel workflow

--- a/.github/workflows/deploy-keel.yaml
+++ b/.github/workflows/deploy-keel.yaml
@@ -35,10 +35,10 @@ jobs:
           image: ghcr.io/${{ github.repository }}
           tag: ${{ steps.sha.outputs.sha8 }}
 
-      - name: Deploy ${{ env.APP_NAME }} ${{ env.APP_ENV }} version ${{ steps.sha.outputs.sha8 }} by user ${{ github.actor }}
-        if: always()
-        uses: act10ns/slack@v1
-        with:
-          status: ${{ job.status }}
-          steps: ${{ toJson(steps) }}
-          channel: "${{ env.ALERTS_CHANNEL }}"
+      #- name: Deploy ${{ env.APP_NAME }} ${{ env.APP_ENV }} version ${{ steps.sha.outputs.sha8 }} by user ${{ github.actor }}
+      #  if: always()
+      #  uses: act10ns/slack@v1
+      #  with:
+      #    status: ${{ job.status }}
+      #    steps: ${{ toJson(steps) }}
+      #    channel: "${{ env.ALERTS_CHANNEL }}"
