--- a/.github/workflows/deploy-keel.yaml
+++ b/.github/workflows/deploy-keel.yaml
@@ -30,7 +30,7 @@ jobs:
     steps:
       - name: deploy-${{ env.APP_ENV }}
         run: |
-         curl -v -X POST -H "Content-Type: application/json" -d '{ "name": "ghcr.io/${{ github.repository }}", "tag": '"'${{ steps.sha.outputs.sha8 }}"}'"' ${{ env.KEEL_WEBHOOK_URL }}/v1/webhooks/native
+         curl -v -X POST -H "Content-Type: application/json" -d '{ "name": "ghcr.io/${{ github.repository }}", "tag": '"'${{ steps.sha.outputs.sha8 }}'"'}" ${{ env.KEEL_WEBHOOK_URL }}/v1/webhooks/native
       
 
       #- name: Deploy ${{ env.APP_NAME }} ${{ env.APP_ENV }} version ${{ steps.sha.outputs.sha8 }} by user ${{ github.actor }}
