Test keel action

--- a/.github/workflows/deploy-keel.yaml
+++ b/.github/workflows/deploy-keel.yaml
@@ -33,10 +33,12 @@ jobs:
         id: sha
         run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
       - name: deploy-${{ env.APP_ENV }}
-        run: |
-         curl -v -X POST -H "Content-Type: application/json" -d '{ "name": '"'ghcr.io/${{ github.repository }}'"', "tag": '"'${{ steps.sha.outputs.sha8 }}'"'}' ${{ env.KEEL_WEBHOOK_URL }}/v1/webhooks/native
-      
-
+        uses: jaapio/keelsh-deploy@master
+        with:
+          keelBaseUrl: ${{ env.KEEL_WEBHOOK_URL }}
+          image: ghcr.io/${{ github.repository }}
+          tag: ${{ steps.sha.outputs.sha8 }}
+          
       #- name: Deploy ${{ env.APP_NAME }} ${{ env.APP_ENV }} version ${{ steps.sha.outputs.sha8 }} by user ${{ github.actor }}
       #  if: always()
       #  uses: act10ns/slack@v1
