--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -24,6 +24,7 @@ env:
   REGISTRY: ${{ inputs.REGISTRY }}
   GH_REGISTRY_USERNAME: ${{ secrets.GH_REGISTRY_USERNAME }}
   GH_REGISTRY_PASSWORD: ${{ secrets.GH_REGISTRY_PASSWORD }}
+  GITHUB_TOKEN: ${{ secrets.GH_REGISTRY_PASSWORD }}
   CONTEXT: ${{ inputs.CONTEXT }}
   WITH_XDEBUG: ${{ inputs.WITH_XDEBUG }}
 
