fix docker workflo

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -15,6 +15,10 @@ on:
         required: false
         type: string
         default: false
+      APP_ENV:
+        required: false
+        type: string
+        default: prod
     secrets:
       GH_REGISTRY_USERNAME:
         required: true
@@ -27,6 +31,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GH_REGISTRY_PASSWORD }}
   CONTEXT: ${{ inputs.CONTEXT }}
   WITH_XDEBUG: ${{ inputs.WITH_XDEBUG }}
+  APP_ENV: ${{ inputs.APP_ENV }}
 
 jobs:
   build:
@@ -49,7 +54,7 @@ jobs:
           context: ${{ env.CONTEXT }}
           push: true
           build-args: |
-            APP_ENV=prod
+            APP_ENV=${{ env.APP_ENV }}
             APP_VERSION=${{ steps.sha.outputs.sha8 }}
           tags: |
             ghcr.io/${{ github.repository }}:${{ steps.sha.outputs.sha8 }}
