--- a/.github/workflows/argocd-app-setup.yaml
+++ b/.github/workflows/argocd-app-setup.yaml
@@ -28,9 +28,10 @@ on:
 env:
   APP_ENV: "${{ inputs.APP_ENV }}"
   APP_NAME: "${{ inputs.APP_NAME }}"
+  ARGOCD_CONF_DIR: "${{ inputs.ARGOCD_CONF_DIR }}" 
 
 jobs:
-  deploy:
+  argocd:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
