Fix argocd setup pipeline

--- a/.github/workflows/deploy-argocd.yaml
+++ b/.github/workflows/deploy-argocd.yaml
@@ -1,7 +1,5 @@
----
 name: ARGOCD
 
-# yamllint disable-line rule:truthy
 on:
   workflow_call:
     inputs:
@@ -33,10 +31,11 @@ env:
   ARGOCD_CLI_VERSION: 2.3.3
 
 jobs:
-  argocd:
+  sync-stg:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
+        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         uses: actions/checkout@v2
       - name: Get Short SHA
         id: sha
@@ -47,9 +46,22 @@ jobs:
           version: ${{ env.ARGOCD_CLI_VERSION }}
           command: login
           options: --insecure --grpc-web --username ${{ secrets.ARGOCD_USER }} --password ${{ secrets.ARGOCD_PASS}} ${{ secrets.ARGOCD_URL }}
+     
       - uses: clowdhaus/argo-cd-action/@v1.9.0
         name: add argocd project
         with:
           version: ${{ env.ARGOCD_CLI_VERSION }}
           command: proj
           options: create ${{ env.APP_NAME }} -f ${{ env.ARGOCD_CONF_DIR }}/project-${{ env.APP_ENV }}.yaml
+
+      - name: ArgoCD Overwrite Image Tag
+        uses: clowdhaus/argo-cd-action/@main
+        with:
+          version: ${{ env.ARGOCD_CLI_VERSION }}
+          command: app set at-omr-v2-stg
+          options: --kustomize-image "ghcr.io/${{ github.repository }}:${{ steps.sha.outputs.sha8 }}"
+
+      - name: Sync Staging
+        uses: clowdhaus/argo-cd-action/@main
+        with:
+          command: app sync ${{ env.APP_NAME }}-${{ env.APP_ENV }} --prune
