--- a/.github/workflows/deploy-argocd.yaml
+++ b/.github/workflows/deploy-argocd.yaml
@@ -13,6 +13,14 @@ on:
         required: false
         type: string
         default: .argocd
+      APP_PROJ_FILE_ARGOCD:
+        required: false
+        type: string
+        default: project.yaml
+      APP_FILE_ARGOCD:
+        required: false
+        type: string
+        default: application.yaml
     secrets:
       GH_TOKEN:
         required: true
@@ -26,6 +34,8 @@ on:
 env:
   APP_ENV: "${{ inputs.APP_ENV }}"
   APP_NAME: "${{ inputs.APP_NAME }}"
+  APP_PROJ_FILE_ARGOCD: "${{ inputs.APP_PROJ_FILE_ARGOCD }}"
+  APP_FILE_ARGOCD: "${{ inputs.APP_FILE_ARGOCD }}"
   ARGOCD_CONF_DIR: "${{ inputs.ARGOCD_CONF_DIR }}"
   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   ARGOCD_CLI_VERSION: 2.3.3
@@ -52,14 +62,14 @@ jobs:
         with:
           version: ${{ env.ARGOCD_CLI_VERSION }}
           command: proj
-          options: create ${{ env.APP_NAME }}-${{ env.APP_ENV }} -f ${{ env.ARGOCD_CONF_DIR }}/project-${{ env.APP_ENV }}.yaml --upsert
+          options: create -f ${{ env.ARGOCD_CONF_DIR }}/${{ env.APP_PROJ_FILE_ARGOCD }} --upsert
 
       - uses: clowdhaus/argo-cd-action/@v1.9.0
         name: add argocd app
         with:
           version: ${{ env.ARGOCD_CLI_VERSION }}
           command: app
-          options: create ${{ env.APP_NAME }}-${{ env.APP_ENV }} -f ${{ env.ARGOCD_CONF_DIR }}/project-${{ env.APP_ENV }}.yaml --upsert      
+          options: create -f ${{ env.ARGOCD_CONF_DIR }}/${{ env.APP_FILE_ARGOCD }} --upsert      
 
       - name: ArgoCD Overwrite Image Tag
         uses: clowdhaus/argo-cd-action/@main
