--- a/.github/workflows/deploy-argocd.yaml
+++ b/.github/workflows/deploy-argocd.yaml
@@ -62,7 +62,7 @@ jobs:
         with:
           version: ${{ env.ARGOCD_CLI_VERSION }}
           command: proj
-          options: create -f ${{ env.ARGOCD_CONF_DIR }}/${{ env.APP_ENV }}/${{ env.APP_PROJ_FILE_ARGOCD }} --upsert
+          options: create -f ${{ env.ARGOCD_CONF_DIR }}/${{ env.APP_PROJ_FILE_ARGOCD }} --upsert
 
       - uses: clowdhaus/argo-cd-action/@v1.9.0
         name: add argocd app
