--- a/.github/workflows/deploy-argocd.yaml
+++ b/.github/workflows/deploy-argocd.yaml
@@ -21,6 +21,10 @@ on:
         required: false
         type: string
         default: application.yaml
+      DOCKER_TAG_SUFFIX:
+        required: false
+        type: string
+        default: false
     secrets:
       GH_TOKEN:
         required: true
@@ -39,6 +43,7 @@ env:
   ARGOCD_CONF_DIR: "${{ inputs.ARGOCD_CONF_DIR }}"
   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   ARGOCD_CLI_VERSION: 2.3.3
+  DOCKER_TAG_SUFFIX: "${{ inputs.DOCKER_TAG_SUFFIX }}"
 
 jobs:
   sync:
@@ -76,7 +81,7 @@ jobs:
         with:
           version: ${{ env.ARGOCD_CLI_VERSION }}
           command: app set ${{ env.APP_NAME }}-${{ env.APP_ENV }}
-          options: --kustomize-image "ghcr.io/${{ github.repository }}:${{ steps.sha.outputs.sha8 }}"
+          options: --kustomize-image "ghcr.io/${{ github.repository }}:${{ if steps.sha.outputs.sha8 }}${{ if env.DOCKER_TAG_SUFFIX  }}"
 
       - name: Sync ${{ env.APP_ENV }}
         uses: clowdhaus/argo-cd-action/@main
