Add pipeline for compositions

--- a/.github/workflows/deploy-composition.yaml
+++ b/.github/workflows/deploy-composition.yaml
@@ -31,7 +31,7 @@ concurrency:
 jobs:
   deploy:
     environment:
-      name: ${{ env.CLAIM_NAME
+      name: ${{ env.CLAIM_NAME }}
     name: deploy
     runs-on: ubuntu-latest
     steps:
