--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -55,6 +55,7 @@ jobs:
           push: true
           build-args: |
             APP_ENV=${{ env.APP_ENV }}
+            CI_ENV=${{ env.APP_ENV }}
             APP_VERSION=${{ steps.sha.outputs.sha8 }}
           tags: |
             ghcr.io/${{ github.repository }}:${{ steps.sha.outputs.sha8 }}
