--- a/.github/workflows/deploy-argocd.yaml
+++ b/.github/workflows/deploy-argocd.yaml
@@ -9,6 +9,10 @@ on:
       APP_ENV:
         required: true
         type: string
+      APP_URL:
+        required: false
+        type: string
+        default: https://app.stg.arcopay.com.br
       ARGOCD_CONF_DIR:
         required: false
         type: string
@@ -42,6 +46,7 @@ on:
 env:
   APP_ENV: "${{ inputs.APP_ENV }}"
   APP_NAME: "${{ inputs.APP_NAME }}"
+  APP_URL: "${{ inputs.APP_URL }}"
   APP_PROJ_FILE_ARGOCD: "${{ inputs.APP_PROJ_FILE_ARGOCD }}"
   APP_FILE_ARGOCD: "${{ inputs.APP_FILE_ARGOCD }}"
   ARGOCD_CONF_DIR: "${{ inputs.ARGOCD_CONF_DIR }}"
@@ -52,6 +57,9 @@ env:
 
 jobs:
   sync:
+    environment:
+      name: ${{ env.APP_ENV }}
+      url: ${{ env.APP_URL }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
