--- a/.github/workflows/deploy-argocd.yaml
+++ b/.github/workflows/deploy-argocd.yaml
@@ -9,10 +9,10 @@ on:
       APP_ENV:
         required: true
         type: string
-      APP_URL:
-        required: false
-        type: string
-        default: https://applocalhost
+      #APP_URL:
+      # required: false
+      #  type: string
+      # default: https://applocalhost
       ARGOCD_CONF_DIR:
         required: false
         type: string
@@ -46,7 +46,7 @@ on:
 env:
   APP_ENV: "${{ inputs.APP_ENV }}"
   APP_NAME: "${{ inputs.APP_NAME }}"
-  APP_URL: "${{ inputs.APP_URL }}"
+  #APP_URL: "${{ inputs.APP_URL }}"
   APP_PROJ_FILE_ARGOCD: "${{ inputs.APP_PROJ_FILE_ARGOCD }}"
   APP_FILE_ARGOCD: "${{ inputs.APP_FILE_ARGOCD }}"
   ARGOCD_CONF_DIR: "${{ inputs.ARGOCD_CONF_DIR }}"
@@ -57,9 +57,9 @@ env:
 
 jobs:
   sync:
-    environment:
-      name: ${{ env.APP_ENV }}
-      url: ${{ env.APP_URL }}
+    #environment:
+    #  name: ${{ env.APP_ENV }}
+    #  url: ${{ env.APP_URL }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
