--- a/.github/workflows/deploy-argocd.yaml
+++ b/.github/workflows/deploy-argocd.yaml
@@ -57,9 +57,8 @@ env:
 
 jobs:
   sync:
-    #environment:
-    #  name: ${{ env.APP_ENV }}
-    #  url: ${{ env.APP_URL }}
+    environment:
+      name: "${{ env.APP_ENV }}"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
